--- a/about.html
+++ b/about.html
@@ -163,12 +163,12 @@
 									<li class="item-thumbs col-md-4 photography" data-id="id-4" data-type="web">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Warehouse"
-											href="img/works/rack.png">
+											href="img/works/warehouse.png">
 											<span class="overlay-img"></span>
 											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
 										</a>
 										<!-- Thumb Image and Description -->
-										<img src="img/works/rack.png" alt="">
+										<img src="img/works/warehouse.png" alt="">
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
