--- a/contact.html
+++ b/contact.html
@@ -77,16 +77,21 @@
 							<div class="detail">
 								<h3> Office </h3>
 								<p>
-									5 Gaoyuan Road, Suxi Town, Yiwu City <br />
-									Zhejiang Province, 322100, China </p>
+									5 Gaoyuan Road, Suxi Town, <br />
+									Yiwu City, Zhejiang Province <br />
+									322100, China </p>
 							</div>
 							<div class="detail">
 								<h3> Call us </h3>
-								<p> +86 153-8179-6948 </p>
+								<p> 
+									+86 153-8179-6948 <br /> 
+									+86 153-2597-7339
+								</p>
+
 							</div>
 							<div class="detail">
 								<h3> Email us </h3>
-								<p> jihong@outlook.com </p>
+								<p> contact@jihongfs.com </p>
 							</div>
 						</div>
 					</div>
@@ -136,7 +141,7 @@
 						<div class="col-lg-6">
 							<div class="copyright">
 								<p>
-									<span> &copy;2023 Jihong Fashion Co., Ltd. All rights reserved. </span>
+									<span> &copy;2023 JIHONG FASHION Co., Ltd. All Rights Reserved. </span>
 								</p>
 							</div>
 						</div>
