--- a/products.html
+++ b/products.html
@@ -62,13 +62,26 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<div>
+						<div style="text-align: justify;">
 							<h3> What We Produce? </h3>
 							<p>
-								XXX
+								Drawing inspiration from diverse cultures and trends worldwide, our creations fuse tradition with
+								modernity. The result is a unique blend of designs that transcends borders and time, appealing to women
+								of all backgrounds. Our Muslim headscarves and scarves showcase intricate patterns and rich colors,
+								while our girls' ensembles are a testament to youthful charm. Our women's dresses effortlessly combine
+								tradition and fashion, while our loungewear exudes comfort without compromising style.
+								We understand that quality is the cornerstone of lasting satisfaction. That's why we are committed to
+								using only the finest materials and employing meticulous craftsmanship in every product we create. You
+								can trust that our offerings are not just fashionable but also durable, promising to be cherished pieces
+								in your wardrobe for years to come. <br />
 							</p>
+							<strong> Elegance in Every Thread </strong> <br />
 							<p>
-								YYY
+								Our products are more than just garments; they are a testament to the artistry and craftsmanship that
+								goes into every stitch. We believe that clothing should not only reflect individual style but also
+								empower and inspire. Whether you're searching for the perfect hijab, a stylish scarf to complement your
+								outfit, a charming outfit for your little one, a beautiful dress to grace any occasion, or cozy
+								loungewear to relax in, our collection embodies elegance and sophistication.
 							</p>
 						</div>
 					</div>
@@ -80,17 +93,16 @@
 					<div class="col-lg-12">
 						<ul class="portfolio-categ filter">
 							<li class="all active"><a href="#">All</a></li>
-							<li class="web"><a href="#" title=""> Hijab </a></li>
-							<li class="icon"><a href="#" title=""> Clothing </a></li>
-							<li class="graphic"><a href="#" title=""> Kids Wear </a></li>
+							<li class="scarf"><a href="#" title=""> Scarf </a></li>
+							<li class="girl"><a href="#" title=""> Girls' Clothing </a></li>
+							<li class="women"><a href="#" title=""> Women Garment </a></li>
 						</ul>
-						<div class="clearfix">
-						</div>
+						<div class="clearfix"></div>
 						<div class="row">
 							<section id="projects">
 								<ul id="thumbs" class="portfolio">
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="color">
+									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Cotton Hijab"
 											href="img/works/1.png">
@@ -102,7 +114,7 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 design" data-id="id-1" data-type="color">
+									<li class="item-thumbs col-lg-3 design" data-id="id-1" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Polyester Hijab"
 											href="img/works/2.png">
@@ -114,7 +126,31 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="graphic">
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Long Scarf"
+											href="img/works/scarf04.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf04.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Yellow Scarf"
+											href="img/works/scarf06.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf06.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Print Hijab"
 											href="img/works/3.png">
@@ -126,7 +162,7 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="web">
+									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Print Hijab"
 											href="img/works/4.png">
@@ -138,7 +174,7 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 photography" data-id="id-4" data-type="web">
+									<li class="item-thumbs col-lg-3 photography" data-id="id-4" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Print Hijab"
 											href="img/works/5.png">
@@ -150,7 +186,7 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 photography" data-id="id-5" data-type="icon">
+									<li class="item-thumbs col-lg-3 photography" data-id="id-5" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Print Hijab"
 											href="img/works/6.png">
@@ -161,7 +197,7 @@
 										<img src="img/works/6.png" alt="">
 									</li>
 									<!-- End Item Project -->
-									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="web">
+									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Instant Hijab"
 											href="img/works/7.png">
@@ -173,7 +209,7 @@
 									</li>
 									<!-- End Item Project -->
 									<!-- Item Project and Filter Name -->
-									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="graphic">
+									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="scarf">
 										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
 										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Inner Hijab"
 											href="img/works/8.png">
@@ -182,6 +218,126 @@
 										</a>
 										<!-- Thumb Image and Description -->
 										<img src="img/works/8.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Red Scarf"
+											href="img/works/scarf01.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf01.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 design" data-id="id-1" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Beige Scarf"
+											href="img/works/scarf02.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf02.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="White Scarf"
+											href="img/works/scarf03.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf03.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="scarf">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Green Scarf"
+											href="img/works/scarf05.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/scarf05.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl Clothing"
+											href="img/works/kidswear01.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear01.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl Baby Clothing"
+											href="img/works/kidswear02.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear02.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl Dresses"
+											href="img/works/kidswear03.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear03.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl Suit"
+											href="img/works/kidswear04.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear04.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl Pajamas"
+											href="img/works/kidswear05.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear05.png" alt="">
+									</li>
+									<!-- End Item Project -->
+									<!-- Item Project and Filter Name -->
+									<li class="item-thumbs col-lg-3 photography" data-id="id-2" data-type="girl">
+										<!-- Fancybox - Gallery Enabled - Title - Full Image -->
+										<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Girl T-shirts Shorts"
+											href="img/works/kidswear06.png">
+											<span class="overlay-img"></span>
+											<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
+										</a>
+										<!-- Thumb Image and Description -->
+										<img src="img/works/kidswear06.png" alt="">
 									</li>
 									<!-- End Item Project -->
 								</ul>
@@ -198,7 +354,7 @@
 						<div class="col-lg-6">
 							<div class="copyright">
 								<p>
-									<span> &copy;2023 Jihong Fashion Co., Ltd. All rights reserved. </span>
+									<span> &copy;2023 JIHONG FASHION Co., Ltd. All Rights Reserved. </span>
 								</p>
 							</div>
 						</div>
