--- a/technology.html
+++ b/technology.html
@@ -66,11 +66,10 @@
 						<div class="about-logo">
 							<h2> How We Produce? </h2>
 							<p style="padding-top: 2%;">
-								Our factory is equipped with the latest digital printing machines, including the MS JP7, MS JP4,
-								and MS JP4-320. These machines are capable of printing on a wide range of fabrics, including
-								cotton, silk, polyester, and more. The printing process is fast and efficient, with a maximum
-								printing speed of 120 square meters per hour. The machines are also capable of printing on
-								multiple rolls of fabric simultaneously, allowing for high-volume production.
+								At our company, the production of our textile products is a harmonious blend of traditional
+								craftsmanship and cutting-edge technology. We take pride in every step of the process, from the
+								selection of materials to the final presentation of our exquisite garments. Here's a glimpse into how we
+								bring our vision to life:
 							</p>
 							<!-- <img src="img/biz_process.jpg" style="width: 100%; height: auto;" > -->
 						</div>
@@ -252,7 +251,7 @@
 						<div class="col-lg-6">
 							<div class="copyright">
 								<p>
-									<span> &copy;2023 Jihong Fashion Co., Ltd. All rights reserved. </span>
+									<span> &copy;2023 JIHONG FASHION Co., Ltd. All Rights Reserved. </span>
 								</p>
 							</div>
 						</div>
