--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 		</header>
 		<!-- end header -->
 		<section id="banner">
-
 			<!-- Slider -->
 			<div id="main-slider" class="flexslider">
 				<ul class="slides">
@@ -83,20 +82,18 @@
 					<div class="col-lg-12">
 						<div class="aligncenter">
 							<h1 class="aligncenter"> Who We Are </h1>
-							<p style="text-align: left; font-size: 16px; padding-top: 5%;">
-								Founded in 2009, <strong> JIHONG FASHION </strong> is one of the leading hijab fashion
-								manufacturers in China. Located in the "world trade center", Yiwu, the
-								company connects all of the orders from the world to the high quality fair
-								price Chinese manufacturing. <br /><br />
-
-								<strong> JIHONG FASHION </strong> has renowned reputation in the high quality products and services.
-								With a manufacturing area of 29 thousand sq. meters (7.2 acres), the company has
-								the whole production stages from weaving, dyeing, digital printing, cutting, sewing, ironing,
-								packaging, which leads a stable quality and sufficient production capacity of 1 million
-								pieces per month. <br />
+							<p style="text-align: justify; font-size: 16px; padding-top: 4%;">
+								Founded in 2009, <strong> JIHONG FASHION </strong> is specialised in girl and woman garment manufacturer for different
+								cultures and ages. Located in the "world trade center", Yiwu, the company connects all of the orders
+								from the world to the high quality fair price Chinese manufacturing.
+							</p>
+							<p style="text-align: justify; font-size: 16px; padding-top: 1%;">
+							 	<strong> JIHONG FASHION </strong> has renowned reputation in the high quality products and services. With a manufacturing
+								area of 29 thousand sq. meters (7.2 acres), the company has the whole production stages from weaving,
+								dyeing, digital printing, cutting, sewing, ironing, packaging, which leads a stable quality and
+								sufficient production capacity.
 							</p>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -221,7 +218,7 @@
 						<div class="col-lg-6">
 							<div class="copyright">
 								<p>
-									<span> &copy;2023 Jihong Fashion Co., Ltd. All rights reserved. </span>
+									<span> &copy;2023 JIHONG FASHION Co., Ltd. All Rights Reserved. </span>
 								</p>
 							</div>
 						</div>
