--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="aligncenter">
 							<h1 class="aligncenter"> Who We Are </h1>
 							<p style="text-align: justify; font-size: 16px; padding-top: 4%;">
-								Founded in 2009, <strong> JIHONG FASHION </strong> is specialised in girl and woman garment manufacturer for different
+								Founded in 2009, <strong> JIHONG FASHION </strong> is specialised in girls clothing and women clothing manufacturer for different
 								cultures and ages. Located in the "world trade center", Yiwu, the company connects all of the orders
 								from the world to the high quality fair price Chinese manufacturing.
 							</p>
