--- a/technology.html
+++ b/technology.html
@@ -65,7 +65,7 @@
 					<div class="col-md-12">
 						<div class="about-logo">
 							<h2> How We Produce? </h2>
-							<p style="padding-top: 2%;">
+							<p style="padding-top: 2%; text-align: justify;">
 								At our company, the production of our textile products is a harmonious blend of traditional
 								craftsmanship and cutting-edge technology. We take pride in every step of the process, from the
 								selection of materials to the final presentation of our exquisite garments. Here's a glimpse into how we
@@ -79,7 +79,7 @@
 					<div class="col-md-4">
 						<img class="img-responsive" src="img/tech_print_at_paper.png" alt="">
 						<h4> Print on Paper </h4>
-						<p>
+						<p style="text-align: justify;">
 							Print on paper is the traditional method of printing where designs are transferred onto paper substrates.
 							With the advent of digital technologies, printing on paper has seen a significant transformation. From
 							brochures to posters, the quality and speed of output have improved dramatically. Key features include:
@@ -99,7 +99,7 @@
 					<div class="col-md-4 md-margin-bottom-40">
 						<img class="img-responsive" src="img/tech_print_at_fabric.png" alt="">
 						<h4> Print on Fabric </h4>
-						<p>
+						<p style="text-align: justify;">
 							Print on fabric technology enables direct printing onto textile materials. Utilizing advanced digital
 							inkjet printers, this method allows for vibrant, high-resolution patterns and designs to be transferred
 							directly onto fabrics, from cotton to silk and synthetics. The advantages include:
@@ -119,7 +119,7 @@
 					<div class="col-md-4 md-margin-bottom-40">
 						<img class="img-responsive" src="img/tech_lazer_cut.png" alt="">
 						<h4> Lazer Cut </h4>
-						<p>
+						<p style="text-align: justify;">
 							Laser cutting is a technology that uses a high-power laser beam to cut or engrave materials. Controlled by
 							computer software, the laser beam vaporizes, burns, or melts the material, resulting in precise cuts or
 							engravings. While commonly associated with metals, laser cutting can also be used on textiles, plastics,
@@ -145,7 +145,7 @@
 						<div class="col-md-4 md-margin-bottom-40">
 							<img class="img-responsive" src="img/tech_embroidering.png" alt="">
 							<h4> Embriodering </h4>
-							<p>
+							<p style="text-align: justify;">
 								Embroidering, a timeless art form that dates back centuries, has been enhanced and revolutionized by
 								modern technology, making it a blend of tradition and innovation.
 							<ul style="padding-left: 5%;">
@@ -173,7 +173,7 @@
 						<div class="col-md-4 md-margin-bottom-40">
 							<img class="img-responsive" src="img/tech_pleating.png" alt="">
 							<h4> Pleating </h4>
-							<p>
+							<p style="text-align: justify;">
 								Pleating, the art of folding fabric in a repeated pattern, has been an integral part of fashion and
 								textile arts for centuries. Modern technology has refined and expanded the capabilities of this age-old
 								technique, enabling a wide variety of precise and consistent pleats.
@@ -204,7 +204,7 @@
 						<div class="col-md-4 md-margin-bottom-40">
 							<img class="img-responsive" src="img/tech_drilling.png" alt="">
 							<h4> Glue-on & Hotfix Rhinestone </h4>
-							<p>
+							<p style="text-align: justify;">
 								Rhinestones, often used to adorn clothing, accessories, and various other items, can be applied through
 								several techniques. Among these, the "glue-on" and "hotfix" techniques are prominent in Chinese garment
 								decoration.
