--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 							</ul>
 							</p>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6" style="text-align: justify;">
 							<div class="block-heading-two">
 								<h3><span> Our Solution </span></h3>
 							</div>
