--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-6 wow fadeInLeft">
+					<div class="col-lg-4 wow fadeInLeft">
 						<div class="contact_info">
 							<div class="detail">
 								<h3> Office </h3>
@@ -95,42 +95,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-6 wow fadeInRight">
-						<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-						<div style="overflow:hidden;height:400px;width:600px;">
-							<div id="gmap_canvas" style="height:400px;width:600px;"></div>
-							<style>
-								#gmap_canvas img {
-									max-width: none !important;
-									background: none !important
-								}
-							</style>
-						</div>
-						<script type="text/javascript">
-							function init_map() {
-								var myOptions = {
-									zoom: 14,
-									center: new google.maps.LatLng(29.399380865849928, 120.16410992649881),
-									mapTypeId: google.maps.MapTypeId.ROADMAP
-								};
-								map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);
-								marker = new google.maps.Marker({
-										map: map,
-										position: new google.maps.LatLng(29.399380865849928, 120.16410992649881)
-									});
-								infowindow = new google.maps.InfoWindow({
-										content: "<b>Jihong Co., Ltd.</b><br/>5 Gaoyuan Road<br/> Yiwu"
-									});
-								google.maps.event.addListener(
-									marker,
-									"click", function () {
-										infowindow.open(map, marker);
-									});
-								infowindow.open(map, marker);
-							}
-							google.maps.event.addDomListener(window, 'load', init_map);
-						</script>
-					</div>
+					<div class="col-lg-6 wow fadeInRight">
+            <img src="img/address_map.png" style="width: 100%; height: auto;" />
+          </div>
 				</div>
 			</div>
 		</section>
