--- a/products.html
+++ b/products.html
@@ -93,9 +93,9 @@
 					<div class="col-lg-12">
 						<ul class="portfolio-categ filter">
 							<li class="all active"><a href="#">All</a></li>
-							<li class="scarf"><a href="#" title="">Scarf</a></li>
-							<li class="girl"><a href="#" title="">Girls' Clothes</a></li>
-							<li class="women"><a href="#" title="">Women Clothes</a></li>
+							<li class="scarf"><a href="#" title="">Scarf & Hijab</a></li>
+							<li class="girl"><a href="#" title="">Girls Clothing</a></li>
+							<li class="women"><a href="#" title="">Women Clothing</a></li>
 						</ul>
 						<div class="clearfix"></div>
 						<div class="row">
@@ -170,18 +170,6 @@
 									</a>
 									<!-- Thumb Image and Description -->
 									<img src="img/works/4.png" alt="">
-								</li>
-								<!-- End Item Project -->
-								<!-- Item Project and Filter Name -->
-								<li class="item-thumbs col-lg-3 photography" data-id="id-0" data-type="scarf">
-									<!-- Fancybox - Gallery Enabled - Title - Full Image -->
-									<a class="hover-wrap fancybox" data-fancybox-group="gallery" title="Print Hijab"
-										href="img/works/5.png">
-										<span class="overlay-img"></span>
-										<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-search"></i></span>
-									</a>
-									<!-- Thumb Image and Description -->
-									<img src="img/works/5.png" alt="">
 								</li>
 								<!-- End Item Project -->
 								<!-- Item Project and Filter Name -->
